# DoomIIRPG-RE

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPMENT.md  README.md  build-macos.sh  entities.ini  imgui.ini  vcpkg.json
src/: App.cpp  CAppContainer.cpp  CAppContainer.h  CMakeLists.txt  EntityDef.cpp  Game.cpp  INIReader.cpp  INIReader.h  Main.cpp  MenuSystem.cpp  Render.cpp  SDLGL.cpp  Text.cpp  VFS.cpp  VFS.h  ZipFile.cpp
src/assets-manager/: AssetBrowser.cpp  AssetBrowser.h  CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  SpriteLoader.cpp  SpriteLoader.h  main.cpp
src/converter/: BSPCompiler.h  BspToBin.cpp  BspToBin.h  CMakeLists.txt  Error.cpp  MapDataIO.cpp  MapDataIO.h  TextureDecoder.cpp  TextureDecoder.h  converter.h  d1-converter.cpp  d1-converter.h  d2-converter.cpp  d2-converter.h  main.cpp
src/converter/resources/: characters.yaml  effects.yaml  embed_resources.cmake  entities.yaml  sprites.yaml  weapons.yaml
src/editor/: BSPCompiler.cpp  CMakeLists.txt  Camera.cpp  Camera.h  EditorState.cpp  EditorState.h  EditorUI.cpp  EditorUI.h  EntityPlacement.cpp  EntityPlacement.h  GameYamlRegistrar.cpp  GameYamlRegistrar.h  MapCompiler.cpp  MapCompiler.h  MapData.h  MapDataIO.cpp  MapProject.cpp  MapProject.h  main.cpp
src/editor/projects/: two_rooms.yaml
src/engine/: App.cpp  App.h  Button.cpp  Button.h  CAppContainer.cpp  CAppContainer.h  Canvas.cpp  Canvas.h  CanvasCharSelect.cpp  CanvasDialog.cpp  CanvasTravelMap.cpp  CrashHandler.cpp  DataNode.cpp  DataNode.h  Error.cpp  Error.h  GLES.cpp  GLES.h  GameModuleRegistry.cpp  GameModuleRegistry.h  GameScript.cpp  GameSprite.h  Graphics.cpp  Graphics.h  Hud.cpp  ICanvasState.h  IGameModule.h  INIReader.cpp  INIReader.h  Image.cpp  Input.cpp  Input.h  JavaStream.cpp  JavaStream.h  LerpSprite.cpp  LerpSprite.h  Log.h  Main.cpp  MainHeadless.cpp  MayaCamera.cpp  (+26 more)
src/engine/audio/: Sound.cpp  Sound.h
src/engine/canvas/: Canvas.cpp  Canvas.h  CanvasAutomap.cpp  CanvasCharSelect.cpp  CanvasDialog.cpp  CanvasLoot.cpp  CanvasMinigame.cpp  CanvasStory.cpp  CanvasTravelMap.cpp  ICanvasState.h
src/engine/core/: App.cpp  App.h  CAppContainer.cpp  CAppContainer.h  CrashHandler.cpp  CrashHandler.h  EntityTypes.h  Error.cpp  Error.h  EventBus.h  GameEvents.h  Log.cpp  Log.h  Main.cpp  StringHash.h  Utils.cpp  Utils.h
src/engine/data/: DataNode.cpp  DataNode.h
src/engine/graphics/: GLES.cpp  GLES.h  Graphics.cpp  Graphics.h  IDIB.cpp  IDIB.h  Image.cpp  Image.h  ParticleSystem.cpp  ParticleSystem.h  SDLGL.cpp  SDLGL.h  Shader.cpp  Shader.h  TGLEdge.cpp  TGLEdge.h  TGLVert.h  TinyGL.cpp  TinyGL.h
src/engine/input/: Button.cpp  Button.h  Input.cpp  Input.h
src/engine/menu/: MenuInit.cpp  MenuInput.cpp  MenuItem.cpp  MenuItem.h  MenuRender.cpp  MenuSystem.cpp  MenuSystem.h  MenuYAML.cpp
src/engine/render/: Render.cpp  Render.h  RenderBSP.cpp  RenderEffects.cpp  RenderPortal.cpp  RenderSprite.cpp  RenderView.cpp  Span.h
src/engine/resource/: AssetLoader.cpp  AssetLoader.h  BinaryStream.cpp  BinaryStream.h  JavaStream.cpp  JavaStream.h  ModManager.cpp  ModManager.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  VFS.cpp  VFS.h  ZipFile.cpp  ZipFile.h
src/engine/script/: Component.h  GameModuleRegistry.h  GameScript.cpp  GameScript.h  IGameModule.h  IMinigame.h  MinigameRegistry.h  OpcodeRegistry.h
src/engine/ui/: DevConsole.cpp  DevConsole.h  Hud.cpp  Hud.h  LerpSprite.cpp  LerpSprite.h  Text.cpp  Text.h
src/engine/widget/: WAutomap.cpp  WAutomap.h  WButton.cpp  WButton.h  WCheckbox.cpp  WCheckbox.h  WImage.cpp  WImage.h  WLabel.cpp  WLabel.h  WScrollPanel.cpp  WScrollPanel.h  WSelector.cpp  WSelector.h  WSlider.cpp  WSlider.h  WVerticalMenu.cpp  WVerticalMenu.h  Widget.cpp  Widget.h  WidgetLoader.cpp  WidgetLoader.h  WidgetScreen.cpp  WidgetScreen.h
src/game/: AutomapState.cpp  Combat.cpp  Combat.h  CombatEntity.cpp  ComicBook.cpp  ComicBook.h  ConfigEnums.cpp  ConfigEnums.h  CreditsState.cpp  DoomIIRPGGame.cpp  DoomIIRPGGame.h  Entity.cpp  Entity.h  EntityDef.cpp  EntityDef.h  EntityNames.cpp  EntityNames.h  Enums.h  Game.cpp  Game.h  GameDataParsers.cpp  HackingGame.cpp  HackingGame.h  ItemDefs.cpp  ItemDefs.h  LogoState.cpp  LogoState.h  Player.cpp  Player.h  ScriptThread.cpp  SentryBotGame.cpp  SentryBotGame.h  Sounds.cpp  Sounds.h  SpriteDefs.cpp  SpriteDefs.h  VendingMachine.cpp  VendingMachine.h
src/game/asset/: SoundNames.h  Sounds.cpp  Sounds.h  WeaponNames.h
src/game/canvas/: CanvasAutomap.cpp  CanvasDialog.cpp  CanvasMinigame.cpp  DialogManager.cpp  DialogManager.h  LootDistributor.cpp  LootDistributor.h  MinigameUI.cpp  MinigameUI.h  StoryRenderer.cpp  StoryRenderer.h
src/game/combat/: Combat.cpp  Combat.h  CombatEntity.cpp  CombatEntity.h
src/game/core/: DoomIIRPGGame.cpp  DoomIIRPGGame.h  Game.cpp  Game.h  GameMonsters.cpp  GameSaveLoad.cpp  GameSprites.cpp  GameWorld.cpp
src/game/data/: ConfigEnums.cpp  ConfigEnums.h  Enums.h  GameDataParsers.cpp  GameDataParsers.h  ItemDefs.cpp  ItemDefs.h  SpriteDefs.cpp  SpriteDefs.h
src/game/entity/: AIComponent.cpp  AIComponent.h  Entity.cpp  Entity.h  EntityCombat.cpp  EntityDef.cpp  EntityDef.h  EntityMonster.cpp  EntityMonster.h  EntityMovement.cpp  EntityNames.cpp  EntityNames.h  EntitySaveLoad.cpp  LootComponent.cpp  LootComponent.h
src/game/minigame/: HackingGame.cpp  HackingGame.h  SentryBotGame.cpp  SentryBotGame.h  VendingMachine.cpp  VendingMachine.h
src/game/player/: Player.cpp  Player.h  PlayerBuffs.cpp  PlayerCombat.cpp  PlayerFamiliar.cpp  PlayerSaveLoad.cpp
src/game/script/: ScriptThread.cpp  ScriptThread.h
src/game/ui/: AutomapRenderer.cpp  AutomapRenderer.h  AutomapState.cpp  AutomapState.h  BenchmarkState.cpp  BenchmarkState.h  BotDyingState.cpp  BotDyingState.h  CameraState.cpp  CameraState.h  CharacterSelectionState.cpp  CharacterSelectionState.h  (+40 more)
test/: CMakeLists.txt  test_combat_entity.cpp  test_game_math.cpp  test_map_compiler.cpp  test_mapdata_roundtrip.cpp  test_player_inventory.cpp  test_player_stats.cpp  test_script_stack.cpp  test_script_vm.cpp
(+119 files in other folders)
